--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "open": "^10.2.0",
+    "string-similarity": "^4.0.4",
     "xlsx": "^0.18.5"
   }
 }
